feat: Implement get-maintenance-by-car-id endpoint
