# api/infra/http/docs/swagger.yaml
@@ -480,6 +480,44 @@ paths:
       summary: Create a new maintenance
       tags:
       - Maintenance
+  /api/v1/maintenance/:carID/maintenances:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of maintenances associated with a specific carID
+      operationId: get-maintenances-by-carID
+      parameters:
+      - description: CarID
+        in: path
+        name: carID
+        required: true
+        type: string
+      - description: Page number (default 1)
+        in: query
+        name: page
+        type: integer
+      - description: Number of items per page (default 10)
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved maintenances
+          schema:
+            items:
+              $ref: '#/definitions/maintenancedtos.MaintenanceOutputDTO'
+            type: array
+        "422":
+          description: Validation errors
+          schema:
+            items:
+              $ref: '#/definitions/validation_errors.HTTPError'
+            type: array
+      summary: Get maintenances by carID
+      tags:
+      - Maintenance
   /api/v1/maintenance/{maintenanceID}:
     delete:
       consumes:
